@@ -1,3 +1,7 @@
+10 Aug 2010 'qcodepages' added as command to display valid codepages; 'codepage' command 
+            enhanced to display the current codepage value, command changed to a PANEL command. 
+            Paul Gorlinsky
+
 10 Aug 2010 Population-Count Facility - Roger Bowler
 09 Aug 2010 runtime ctl of select S/390 & z insts in S/370 mode - Ivan Warren
 09 Aug 2010 Distinct-Operands Facility - Roger Bowler
